<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="#ffff"
    tools:context=".MainActivity"
    android:weightSum="6">

    <TextView
        android:id="@+id/screen"
        android:gravity="center|end"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="#ffff"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:padding="5dp"
        android:layout_marginHorizontal="10dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">

        <soup.neumorphism.NeumorphButton
            android:id="@+id/ac"
            android:layout_width="35dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="afterclick"
            android:text="@string/ac"
            android:textColor="#12FF45"
            android:layout_margin="5dp"
            android:textSize="25sp"
            style="@style/Widget.Neumorph.Button">
    </soup.neumorphism.NeumorphButton>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/power"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:onClick="afterclick"
            android:text="@string/root"
            android:layout_margin="5dp"
            android:textColor="#ff000000"
            android:textSize="35sp"
            style="@style/Widget.Neumorph.Button">
    </soup.neumorphism.NeumorphButton>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/back"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#4E4444"
            android:onClick="afterclick"
            android:text="@string/back"
            android:textColor="#ff000000"
            android:layout_margin="5dp"
            android:textSize="15sp"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/div"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:onClick="afterclick"
            app:backgroundTint="#000000"
            android:background="#8E8888"
            android:text="@string/div"
            android:layout_margin="5dp"
            android:textColor="#FF000000"
            android:textSize="25sp"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <soup.neumorphism.NeumorphButton
            android:id="@+id/seven"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/sev"
            android:layout_margin="5dp"
            app:backgroundTint="#4E4444"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/eight"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:layout_margin="5dp"
            app:backgroundTint="#4E4444"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/nine"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:layout_margin="5dp"
            app:backgroundTint="#4E4444"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/mul"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            app:backgroundTint="#171616"
            android:layout_weight="1"
            android:text="@string/multi"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <soup.neumorphism.NeumorphButton
            android:id="@+id/four"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#4E4444"
            android:text="@string/four"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/five"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#4E4444"
            android:text="@string/five"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/six"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/six"
            app:backgroundTint="#4E4444"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/min"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#171616"
            android:text="@string/sub"
            android:layout_margin="5dp"
            android:textSize="35sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4">
        <soup.neumorphism.NeumorphButton
            android:id="@+id/one"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#4E4444"
            android:text="@string/one"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/two"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#4E4444"
            android:text="@string/two"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/three"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            app:backgroundTint="#4E4444"
            android:text="@string/three"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/plus"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            app:backgroundTint="#171616"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_margin="5dp"
            android:textSize="30sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <soup.neumorphism.NeumorphButton
            android:id="@+id/zero"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:onClick="afterclick"
            app:backgroundTint="#4E4444"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/point"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/dot"
            android:layout_margin="5dp"
            app:backgroundTint="#4E4444"
            android:textSize="30sp"
            android:onClick="afterclick"
            android:textColor="#FF000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>
        <soup.neumorphism.NeumorphButton
            android:id="@+id/ans"
            android:layout_height="fill_parent"
            android:layout_width="35dp"
            android:layout_weight="1"
            android:text="@string/mod"
            android:layout_margin="5dp"
            app:backgroundTint="#4E4444"
            android:textSize="23sp"
            android:onClick="afterclick"
            android:textColor="#Ff000000"
            style="@style/Widget.Neumorph.Button">
        </soup.neumorphism.NeumorphButton>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/equal"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="35dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="afterclick"
            android:text="@string/equal"
            android:textColor="#FF000000"
            android:textSize="30sp"
            app:backgroundTint="#131313">
        </soup.neumorphism.NeumorphButton>
    </LinearLayout>
</LinearLayout>